Wed Dec 30 10:31:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeApplication/ComponentAttributesSetter.cpp:
          Removed commented out code

        * AnCE/NodeApplication/NodeApplication.mpc:
          Removed commented out lines

        * DAnCE/NodeApplication/ServerActivator_Impl.cpp:
        * DAnCE/NodeApplication/ServerActivator_Impl.h:
          Removed, not used

        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp:
          Removed commented out code

        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp:
          Const changes

        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.cpp:
        * tools/IDL3_to_XMI/IR_Simulator_visitor.cpp:
          Removed commented out code

Wed Dec 30 08:14:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Deployment/Module_Main.h:
          Check if we get an object back and add more exception handling

Tue Dec 29 11:22:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/Connector/AMI_exec.cpp:
        * connectors/ami4ccm/examples/Hello/Connector/AMI_MyFoo_i.cpp:
          Layout changes

Tue Dec 29 10:16:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/descriptors/run_5_to_1.pl
        * connectors/dds4ccm/examples/Hello/descriptors/run_5_to_5.pl
        * connectors/dds4ccm/examples/Hello/descriptors/run_receiver.pl
        * connectors/dds4ccm/examples/Hello/descriptors/run_sender.pl
        * connectors/dds4ccm/examples/Quoter/descriptors/run_test.pl
        * connectors/dds4ccm/examples/Shapes/descriptors/run_test.pl
        * connectors/dds4ccm/tests/CSLDeadline/descriptors/run_test.pl
        * connectors/dds4ccm/tests/CSLQoS/descriptors/run_test.pl
        * connectors/dds4ccm/tests/CSLSampleRejected/descriptors/run_test.pl
        * connectors/dds4ccm/tests/CSLUnexpStat/descriptors/run_test.pl