@@ -105,7 +105,6 @@ namespace CIAO_ConnectorStatusListener_Test_Receiver_Impl
     ::DDS::DataReader_ptr /* the_reader */,
     const ::DDS::RequestedDeadlineMissedStatus & /* status */)
   {
-    /* Your code here. */
   }
 
   void
@@ -113,7 +112,6 @@ namespace CIAO_ConnectorStatusListener_Test_Receiver_Impl
     ::DDS::DataReader_ptr /* the_reader */,
     const ::DDS::SampleLostStatus & /* status */)
   {
-
   }
 
   //============================================================
